git fixes